# SDLOpenCVDemos

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/BrightestPixel/: CMakeLists.txt  main.cpp
src/CoinCollector/: CMakeLists.txt  main.cpp
src/FrameDifferencing/: CMakeLists.txt  main.cpp
src/WebcamCapture/: CMakeLists.txt  main.cpp
